force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>OneHub: This object is used to send broadcast messages to users on their OneHub dashboard. (US-4388)</description>
    <label>Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>