force-app/main/default/objects/Notification__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>OneHub: This field stores the content of the notification sent to users on their OneHub dashboard. (US-4388)</description>
    <inlineHelpText>Enter Notification Content</inlineHelpText>
    <label>Content</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>