force-app/main/default/objects/Notification__c/fields/Is_Unread__c.field-meta.xml
<CustomField>
    <fullName>Is_Unread__c</fullName>
    <defaultValue>true</defaultValue>
    <description>OneHub: This field indicates if the message was read or unread by users on the OneHub dashboard.(US-4388)</description>
    <label>Is Unread</label>
    <type>Checkbox</type>
</CustomField>