force-app/main/default/objects/Notification__c/fields/Selected_Users__c.field-meta.xml
<CustomField>
    <fullName>Selected_Users__c</fullName>
    <description>OneHub: This field stores the users who were selected to receive this notification on the OneHub dashboard.  (US-4388)</description>
    <label>Selected Users</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>