force-app/main/default/objects/Notification__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>OneHub: This field stored the Subtitle of the Notification that is displayed to users on the OneHub dashboard.
(US-4388)</description>
    <inlineHelpText>Enter Notification Subtitle</inlineHelpText>
    <label>Subtitle</label>
    <type>TextArea</type>
</CustomField>