force-app/main/default/objects/Notification__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>OneHub: This field stored the Title of the Notification that is displayed to users on the OneHub dashboard. 
(US-4388)</description>
    <inlineHelpText>Enter Notification Title</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>