force-app/main/default/objects/Notification__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>OneHub: This field stored the names of all active users on OneHub to select who a notification should be sent to on the OneHub dashboard.(US-4388)</description>
    <inlineHelpText>Select Users this Notification should be sent to.</inlineHelpText>
    <label>Users</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>